--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="hostconn_yes">Connected to server.</string>
     <string name="vp_capture_success">VP capture successful. Do not forget to save!</string>
     <string name="vp_capture_failure">VP capture failed, please try again.</string>
+    <string name="vp_capture_placeholder_description">Description of VP#</string>
 </resources>
