--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,8 @@
     <string name="hostconn_not">Disconnected from server.</string>
     <string name="hostconn_con">Connecting to server...</string>
     <string name="hostconn_yes">Connected to server.</string>
-    <string name="vp_capture_success">VP capture successful. Do not forget to save!</string>
-    <string name="vp_capture_failure">VP capture failed, please try again.</string>
+    <string name="vp_capture_success">VP capture successful. Saving now...</string>
+    <string name="vp_capture_failure">VP capture failed, please refer to configuration instructions, try again or change method.</string>
+    <string name="vp_acquisition_failure">VP photo captured, but augmentation acquisiton failed, please refer to configuration instructions, try again or change method.</string>
     <string name="vp_capture_placeholder_description">Description of VP#</string>
 </resources>
