Commit MyMensor OpenCV 20dez2016 23h30min

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -111,4 +111,8 @@
     <string name="notconnectedtoserver">Sem conexão com servidor.</string>
     <string name="tryingtoconnecttoserver">Chamando servidor, por favor conectar com a internet.</string>
     <string name="trytoconnect">CONECTAR</string>
+    <string name="deletinglocalandremote">Apagar as cópias locais e remota da mídia em tela.</string>
+    <string name="deletinglocal">Apagar a cópia local da mídia em tela.</string>
+    <string name="keepinglocalandremote">Operação cancelada.</string>
+    <string name="keepinglocal">Operação cancelada.</string>
 </resources>
