--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="local_file_deleted">Local file succesfully deleted.</string>
     <string name="sharingphotousing">Share this photo capture using:</string>
     <string name="sharingvideousing">Share this video capture using:</string>
+    <string name="off">OFF</string>
 </resources>
