--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -119,4 +119,5 @@
     <string name="sharingphotousing">Compartilhe esta foto capturada usando:</string>
     <string name="sharingvideousing">Compartilhe este vídeo capturado usando:</string>
     <string name="off">OFF</string>
+    <string name="zero">0</string>
 </resources>
