--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,10 @@
     <string name="sharingvideousing">Share this video capture using:</string>
     <string name="off">OFF</string>
     <string name="zero">0</string>
+    <string name="pta">Please try again.</string>
+    <string name="loginfailed">Login Failed</string>
+    <string name="nosetupfiles">Error: Setup files missing.</string>
+    <string name="nosetupfileexp">There are no local setup files and no connection to MyMensor server. If you decide to continue new files will be created and eventual old ones will be ERASED. Do you wish to continue?</string>
+    <string name="continu">CONTINUE</string>
+    <string name="leaveapp">LEAVE APP</string>
 </resources>
