--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,10 @@
     <string name="continu">CONTINUE</string>
     <string name="leaveapp">LEAVE APP</string>
     <string name="sdk_lower_then_kitkat">Thsi app is not compatible with Android versions prior to KitKat. Closing now.</string>
+    <string name="error_to_obtain_sha256">Error while retrieving Media Signature.</string>
+    <string name="first_time_usage">Creating local configuration files.</string>
+    <string name="start_with_server_connection">Connected to server. Starting with latest configuration.</string>
+    <string name="start_with_no_server_connection">No connection with server. Using locally available configuration.</string>
+    <string name="checkcfgfiles_online">Something wrong happened while downloading configuration from server. Please try again.</string>
+    <string name="checkcfgfiles_offline">Something wrong happened while reading local configuration. Please try again and contact support if problem persists.</string>
 </resources>
