--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,6 @@
     <string name="start_with_no_server_connection">No connection with server. Using locally available configuration.</string>
     <string name="checkcfgfiles_online">Something wrong happened while downloading configuration from server. Please try again.</string>
     <string name="checkcfgfiles_offline">Something wrong happened while reading local configuration. Please try again and contact support if problem persists.</string>
+    <string name="remark">Write remark about capture</string>
+    <string name="sizelimit100">Limited to 100 characters!!!</string>
 </resources>
